--- a/面试题/圣杯布局.html
+++ b/面试题/圣杯布局.html
@@ -2,9 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+       html body{
+
+            height: 100%;
+
+        }
+        body {
+            min-width: 550px;
+        }
+
+        #container {
+            padding-left: 200px;
+            padding-right: 150px;
+        }
+
+        #container .column {
+            float: left;
+        }
+
+        #center {
+            width: 100%;
+        }
+
+        #left {
+            background: #00c1de;
+            width: 200px;
+            margin-left: -100%;
+            position: relative;
+            right: 200px;
+        }
+
+        #right {
+            background: #00c1de;
+            width: 150px;
+            margin-right: -150px;
+        }
+
+        #footer {
+            clear: both;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div id="header"></div>
+<div id="container">
+    <div id="center" class="column">a</div>
+    <div id="left" class="column">x</div>
+    <div id="right" class="column">s</div>
+</div>
+<div id="footer"></div>
 </body>
 </html>
