--- a/面试题/插入排序.html
+++ b/面试题/插入排序.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+// 思想是局部有序
+    function insertSort(arr) {
+        for(var i=1;i<arr.length;i++){
+           var temp=arr[i]
+            var j=i;
+           while(arr[j-1]>temp&&j>0){
+              arr[j]=arr[j-1];
+              j--;
+           }
+           arr[j]=temp
+        }
+        return arr
+    }
+    var arr=[5,3,4,2,9]
+console.log(insertSort(arr));
+</script>
 </body>
 </html>
