--- a/面试题/画一个三角形.html
+++ b/面试题/画一个三角形.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <style>
+        .box{
+            width: 0px;
+            height: 0px;
+             border :50px solid;
+            border-color: transparent transparent #0033ff;
+            position: relative;
+        }
+        #blue:after {
+            content: "";
+            width: 0;
+            height: 0;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            border-width: 0 40px 40px;
+            border-style: solid;
+            border-color: transparent transparent yellow;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div class="box" id="blue">
+
+</div>
 </body>
 </html>
